WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133619
[Mac] checkboxes and radio buttons animate incorrectly
https://bugs.webkit.org/show_bug.cgi?id=133619
Summary
[Mac] checkboxes and radio buttons animate incorrectly
Dean Jackson
Reported
2014-06-08 14:20:18 PDT
[Mac] checkboxes and radio buttons animate incorrectly
Attachments
Patch
(5.03 KB, patch)
2014-06-08 14:25 PDT
,
Dean Jackson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-06-08 14:25:20 PDT
Created
attachment 232685
[details]
Patch
Sam Weinig
Comment 2
2014-06-08 14:30:48 PDT
Comment on
attachment 232685
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232685&action=review
> Source/WebCore/platform/mac/ThemeMac.mm:304 > +static const std::array<FloatSize, 3>& checkboxOffsets()
I think this could use a comment explaining what they the offsets are used for.
> Source/WebCore/platform/mac/ThemeMac.mm:332 > +static const std::array<FloatSize, 3>& radioOffsets()
I think this could use a comment explaining what they the offsets are used for.
Dean Jackson
Comment 3
2014-06-08 17:03:14 PDT
Committed
r169685
: <
http://trac.webkit.org/changeset/169685
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug